@@ -16,6 +16,8 @@
         <skip.assemblyxml>true</skip.assemblyxml>
         <ignite.version>2.13.0</ignite.version>
         <calcite.version>1.25.0</calcite.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -336,8 +338,22 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.12.16</version>
+            <version>2.11.12</version>
         </dependency>
+
+		<dependency>
+			<groupId>sh.den</groupId>
+			<artifactId>scala-offheap_2.11</artifactId>
+			<version>0.1</version>
+		</dependency>
+
+        <dependency>
+            <groupId>sh.den</groupId>
+            <artifactId>scala-offheap-macros_2.11</artifactId>
+            <version>0.1</version>
+        </dependency>
+
+
 
 
     </dependencies>
@@ -422,9 +438,18 @@
                         <artifactId>scala-maven-plugin</artifactId>
                         <version>4.6.2</version>
                         <configuration>
-                            <scalaCompatVersion>2.12.16</scalaCompatVersion>
-                            <scalaVersion>2.12.16</scalaVersion>
+                            <scalaCompatVersion>2.11.12</scalaCompatVersion>
+                            <scalaVersion>2.11.12</scalaVersion>
                             <includes>**/*.scala</includes>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                            <compilerPlugins>
+                                <compilerPlugin>
+                                    <groupId>org.scalamacros</groupId>
+                                    <artifactId>paradise_2.11.12</artifactId>
+                                    <version>2.1.1</version>
+                                </compilerPlugin>
+                            </compilerPlugins>
                         </configuration>
                         <executions>
                             <execution>
@@ -470,7 +495,7 @@
                             <release>17</release>
                             <source>17</source>
                             <target>17</target>
-                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                            <forceJavacCompilerUse>false</forceJavacCompilerUse>
                         </configuration>
                         <executions>
                             <execution>
@@ -489,7 +514,16 @@
                             <testFailureIgnore>true</testFailureIgnore>
                             <forkCount>3</forkCount>
                             <reuseForks>true</reuseForks>
-                            <argLine>@{jacocoArgLine} --enable-preview</argLine>
+                            <argLine>
+                            	-Xms4g -Xmx4g
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                                --add-opens java.base/java.nio=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                -Djava.net.preferIPv4Stack=true
+                                -Dcom.sun.management.jmxremote=false
+                            </argLine>
                             <excludes>
                                 <exclude>**/*Test.java</exclude>
                                 <exclude>**/*TestSuite2.java</exclude>
